closed image tag

--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -10,7 +10,7 @@
     <p>This is my <strong>f</strong>ir<strong>s</strong>t web p<strong>age</strong>!</p>
     <p>Isn't it nice?</p>
 
-    <img src="img/gorp.jpg" alt="An image of Gorp.">
+    <img src="img/gorp.jpg" alt="An image of Gorp."/>
 
     <p>Here are some things I'm going to learn about coding:</p>
     <ul>
